# PythonWeb_mod_8-1

./: models.py  pyproject.toml  quotes.json  search.py  search_by_quotes.py  seed.py
